# Bittrace-Crypto-Investigation-Tool

./: .gitignore  README.md  pyproject.toml
api/: main.py
dashboard/: README.md  next.config.ts  package-lock.json  package.json
data/: download.py
data/subgraphs/: README.md  SCHEMA.md  average_case.json  easy_case.json  hard_case.json
docs/: illicit_per_timestep.csv  methodology.md  results.md  story_consolidation_subgraph.json  story_fan-out-split_subgraph.json  story_peel-chain_subgraph.json  subgraph_tx_16754007_2hop.json  subgraph_tx_232947878_2hop.json  subgraph_tx_24155910_2hop.json
notebooks/: 03_graph_topology.ipynb  03_graph_topology_executed.ipynb  03_graph_topology_run.py  04_layering_patterns.ipynb  04_layering_patterns_executed.ipynb  04_layering_patterns_run.py  05_baseline_rf.ipynb  05_baseline_rf_executed.ipynb  06_gnn_training_run.py  06b_explainability_run.py  07_case_studies_run.py  08_visualization_prototypes_run.py  gen_03_graph_topology.py  gen_04_layering_patterns.py  gen_notebook.py
scripts/: graph_cli.py
src/: __init__.py
src/data/: __init__.py  attribute_catalog.py  loaders.py  schema.sql
src/explain/: __init__.py  importance.py  node_inspector.py  shap_explainer.py  subgraph_explainer.py
src/graph/: __init__.py  builders.py  cases.py  expand.py  export.py  hybrid.py  patterns.py  stats.py  trace.py
src/models/: __init__.py  baseline.py  evaluation.py  gat.py  gcn.py  graph_dataset.py
tests/: test_accounts.py  test_explain.py  test_export.py  test_gcn.py  test_graph.py  test_stories.py  test_trace.py
(+18 files in other folders)
