[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bittrace"
version = "0.1.0"
description = "AI-powered Bitcoin fraud forensics — graph analytics, ML detection, and LLM investigation reports on the Elliptic++ dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "duckdb>=1.0",
    "networkx>=3.0",
    "pyarrow>=15.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "gdown>=4.7",
    "shap>=0.44",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
